--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: fl_channel
 description: channel for native communication,Support ios macos android only
-version: 0.0.1
+version: 0.0.2
 repository: https://github.com/Wayaer/fl_channel.git
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.13.0'
 
 dependencies:
   flutter:
