--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = fl_channel_example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.fl.channel.example
+PRODUCT_BUNDLE_IDENTIFIER = fl.channel.example
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
